// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Handles quick solutions handles the maybeBroke 1`] = `undefined`;

exports[`Handles quick solutions handles the maybeBroke 2`] = `
Object {
  "0,5": Object {
    "direction": "vertical",
    "key": "0,5",
    "lineDelta": Object {
      "x": 0,
      "y": -1,
    },
    "solutionOrderNumber": 1,
    "value": 3,
  },
  "1,4": Object {
    "direction": "horizontal",
    "key": "1,4",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 10,
    "value": 1,
  },
  "4,9": Object {
    "direction": "vertical",
    "key": "4,9",
    "lineDelta": Object {
      "x": 0,
      "y": -1,
    },
    "solutionOrderNumber": 3,
    "value": 3,
  },
  "5,3": Object {
    "direction": "horizontal",
    "key": "5,3",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 2,
    "value": 3,
  },
  "5,7": Object {
    "direction": "horizontal",
    "key": "5,7",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 8,
    "value": 1,
  },
  "5,8": Object {
    "direction": "horizontal",
    "key": "5,8",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 9,
    "value": 1,
  },
  "6,7": Object {
    "direction": "vertical",
    "key": "6,7",
    "lineDelta": Object {
      "x": 0,
      "y": -1,
    },
    "solutionOrderNumber": 5,
    "value": 1,
  },
  "7,4": Object {
    "direction": "vertical",
    "key": "7,4",
    "lineDelta": Object {
      "x": 0,
      "y": 1,
    },
    "solutionOrderNumber": 7,
    "value": 1,
  },
  "7,6": Object {
    "direction": "horizontal",
    "key": "7,6",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 6,
    "value": 1,
  },
  "8,5": Object {
    "direction": "horizontal",
    "key": "8,5",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 4,
    "value": 2,
  },
}
`;

exports[`Handles quick solutions handles the maybeBroke 3`] = `undefined`;

exports[`Handles quick solutions handles the maybeBroke 4`] = `
Object {
  "10,3": Object {
    "direction": "horizontal",
    "key": "10,3",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 8,
    "value": 3,
  },
  "11,0": Object {
    "direction": "horizontal",
    "key": "11,0",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 1,
    "value": 4,
  },
  "4,2": Object {
    "direction": "vertical",
    "key": "4,2",
    "lineDelta": Object {
      "x": 0,
      "y": -1,
    },
    "solutionOrderNumber": 2,
    "value": 1,
  },
  "5,0": Object {
    "direction": "vertical",
    "key": "5,0",
    "lineDelta": Object {
      "x": 0,
      "y": 1,
    },
    "solutionOrderNumber": 4,
    "value": 1,
  },
  "6,3": Object {
    "direction": "vertical",
    "key": "6,3",
    "lineDelta": Object {
      "x": 0,
      "y": -1,
    },
    "solutionOrderNumber": 5,
    "value": 2,
  },
  "7,1": Object {
    "direction": "horizontal",
    "key": "7,1",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 3,
    "value": 1,
  },
  "7,2": Object {
    "direction": "horizontal",
    "key": "7,2",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 6,
    "value": 1,
  },
  "7,7": Object {
    "direction": "vertical",
    "key": "7,7",
    "lineDelta": Object {
      "x": 0,
      "y": -1,
    },
    "solutionOrderNumber": 7,
    "value": 4,
  },
}
`;

exports[`Handles quick solutions handles the maybeBroke 5`] = `undefined`;

exports[`Handles quick solutions handles the maybeBroke 6`] = `
Object {
  "8,0": Object {
    "direction": "vertical",
    "lineDelta": Object {
      "x": 0,
      "y": 1,
    },
    "solutionOrderNumber": 1,
    "value": 2,
  },
}
`;

exports[`Handles quick solutions handles the randomFive 1`] = `undefined`;

exports[`Handles quick solutions handles the randomFive 2`] = `
Object {
  "0,5": Object {
    "direction": "vertical",
    "key": "0,5",
    "lineDelta": Object {
      "x": 0,
      "y": -1,
    },
    "solutionOrderNumber": 1,
    "value": 5,
  },
}
`;

exports[`Handles quick solutions handles the solutionRightBeside 1`] = `undefined`;

exports[`Handles quick solutions handles the solutionRightBeside 2`] = `
Object {
  "10,9": Object {
    "direction": "vertical",
    "key": "10,9",
    "lineDelta": Object {
      "x": 0,
      "y": -1,
    },
    "solutionOrderNumber": 5,
    "value": 1,
  },
  "11,8": Object {
    "direction": "horizontal",
    "key": "11,8",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 1,
    "value": 1,
  },
  "11,9": Object {
    "direction": "horizontal",
    "key": "11,9",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 3,
    "value": 1,
  },
  "8,10": Object {
    "direction": "vertical",
    "key": "8,10",
    "lineDelta": Object {
      "x": 0,
      "y": -1,
    },
    "solutionOrderNumber": 2,
    "value": 1,
  },
  "9,8": Object {
    "direction": "vertical",
    "key": "9,8",
    "lineDelta": Object {
      "x": 0,
      "y": 1,
    },
    "solutionOrderNumber": 4,
    "value": 1,
  },
}
`;

exports[`Handles quick solutions handles the wayTooSimple scenario 1`] = `undefined`;

exports[`Handles quick solutions handles the wayTooSimple scenario 2`] = `
Object {
  "10,10": Object {
    "direction": "vertical",
    "key": "10,10",
    "lineDelta": Object {
      "x": 0,
      "y": -1,
    },
    "solutionOrderNumber": 6,
    "value": 1,
  },
  "11,10": Object {
    "direction": "horizontal",
    "key": "11,10",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 8,
    "value": 1,
  },
  "11,8": Object {
    "direction": "horizontal",
    "key": "11,8",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 5,
    "value": 1,
  },
  "7,4": Object {
    "direction": "horizontal",
    "key": "7,4",
    "lineDelta": Object {
      "x": 1,
      "y": 0,
    },
    "solutionOrderNumber": 2,
    "value": 1,
  },
  "8,5": Object {
    "direction": "horizontal",
    "key": "8,5",
    "lineDelta": Object {
      "x": 1,
      "y": 0,
    },
    "solutionOrderNumber": 4,
    "value": 1,
  },
  "8,6": Object {
    "direction": "vertical",
    "key": "8,6",
    "lineDelta": Object {
      "x": 0,
      "y": -1,
    },
    "solutionOrderNumber": 3,
    "value": 1,
  },
  "9,3": Object {
    "direction": "vertical",
    "key": "9,3",
    "lineDelta": Object {
      "x": 0,
      "y": 1,
    },
    "solutionOrderNumber": 1,
    "value": 2,
  },
  "9,9": Object {
    "direction": "horizontal",
    "key": "9,9",
    "lineDelta": Object {
      "x": 1,
      "y": 0,
    },
    "solutionOrderNumber": 7,
    "value": 1,
  },
}
`;

exports[`Handles quick solutions handles the worksWell scenario 1`] = `undefined`;

exports[`Handles quick solutions handles the worksWell scenario 2`] = `
Object {
  "1,6": Object {
    "direction": "vertical",
    "key": "1,6",
    "lineDelta": Object {
      "x": 0,
      "y": 1,
    },
    "solutionOrderNumber": 2,
    "value": 1,
  },
  "2,5": Object {
    "direction": "vertical",
    "key": "2,5",
    "lineDelta": Object {
      "x": 0,
      "y": 1,
    },
    "solutionOrderNumber": 3,
    "value": 1,
  },
  "3,7": Object {
    "direction": "vertical",
    "key": "3,7",
    "lineDelta": Object {
      "x": 0,
      "y": -1,
    },
    "solutionOrderNumber": 5,
    "value": 1,
  },
  "4,6": Object {
    "direction": "vertical",
    "key": "4,6",
    "lineDelta": Object {
      "x": 0,
      "y": 1,
    },
    "solutionOrderNumber": 6,
    "value": 1,
  },
  "5,6": Object {
    "direction": "horizontal",
    "key": "5,6",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 4,
    "value": 1,
  },
  "5,7": Object {
    "direction": "horizontal",
    "key": "5,7",
    "lineDelta": Object {
      "x": -1,
      "y": 0,
    },
    "solutionOrderNumber": 1,
    "value": 1,
  },
}
`;
